replace javac AST rewrite with Filer-generated plugin entry